<resources>
    <string name="app_name">Nao Enforque o Zezinho</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bem-vindo</string>
    <string name="nav_header_subtitle">Não Enforque o Zezinho</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Iniciar Jogo</string>
    <string name="menu_gallery">Palavras</string>
    <string name="menu_tools">Temas</string>
    <string name="hintInputWord">Digite a palvra</string>
    <string name="labelForInputText">Digite a palavra:</string>
    <string name="labelForInputTextThemeOption">Escolha um tema</string>
    <string name="labelForInputTheme">Digite um tema:</string>
    <string name="hintInputTheme">Digite um tema</string>
    <string name="dialog_themeEdit">Editar</string>
    <string name="dialog_themeEdit_true">Confirmar</string>
    <string name="dialog_themeEdit_false">Cancelar</string>
    <string name="dialog_theme_edit_input">Digite um tema</string>
    <string name="dialog_theme_remove">Remover</string>
    <string name="dialog_theme_remove_true">Confirmar</string>
    <string name="dialog_theme_remove_false">Cancelar</string>
    <string name="dialog_theme_remove_view">Deseja Remover o item?</string>
    <string name="dialog_play_again_title">Deseja Jogar Novamente?</string>
    <string name="hintInputTip">Digite uma dica:</string>
    <string name="hintDialogInputWord">Ajuste a palavra</string>
    <string name="hint_dialog_input_tip">Ajuste a dica</string>
    <string name="btn_play_game">Iniciar Jogo</string>
    <string name="txtViewThemeChoices">Escolha um tema:</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_game2">GameActivity2</string>
    <string name="hintInputAttemp">Insira uma letra ou palavra...</string>
    <string name="btn_attemp_char">Letra</string>
    <string name="btn_attemp_word">Arriscar palavra!</string>
</resources>
